--- a/docker-compose/integrator-analytics/docker-compose.yml
+++ b/docker-compose/integrator-analytics/docker-compose.yml
@@ -43,28 +43,28 @@ services:
         condition: service_healthy
     links:
       - wso2ei-mysql
-  wso2ei-integrator:
-    image: docker.wso2.com/wso2ei-integrator:6.2.0
-    container_name: wso2ei-integrator
-    hostname: wso2ei-integrator
-    ports:
-      - 9443:9443
-      - 8243:8243
-      - 8280:8280
-    healthcheck:
-      test: ["CMD-SHELL", "curl -k -f https://localhost:9443/carbon/admin/login.jsp"]
-      interval: 5s
-      timeout: 3s
-      retries: 10
-      start_period: 60s
-    volumes:
-      # mounting configurations
-      - ./integrator:/home/wso2carbon/volumes/
-    depends_on:
-      wso2ei-mysql:
-        condition: service_healthy
-      wso2ei-analytics:
-        condition: service_healthy
-    links:
-      - wso2ei-mysql
-      - wso2ei-analytics
+  # wso2ei-integrator:
+  #   image: docker.wso2.com/wso2ei-integrator:6.2.0
+  #   container_name: wso2ei-integrator
+  #   hostname: wso2ei-integrator
+  #   ports:
+  #     - 9443:9443
+  #     - 8243:8243
+  #     - 8280:8280
+  #   healthcheck:
+  #     test: ["CMD-SHELL", "curl -k -f https://localhost:9443/carbon/admin/login.jsp"]
+  #     interval: 5s
+  #     timeout: 3s
+  #     retries: 10
+  #     start_period: 60s
+  #   volumes:
+  #     # mounting configurations
+  #     - ./integrator:/home/wso2carbon/volumes/
+  #   depends_on:
+  #     wso2ei-mysql:
+  #       condition: service_healthy
+  #     wso2ei-analytics:
+  #       condition: service_healthy
+  #   links:
+  #     - wso2ei-mysql
+  #     - wso2ei-analytics
