--- a/docker-compose/integrator-analytics/docker-compose.yml
+++ b/docker-compose/integrator-analytics/docker-compose.yml
@@ -38,9 +38,9 @@ services:
     volumes:
       # mounting configurations
       - ./analytics:/home/wso2carbon/volumes/wso2/analytics
-    depends_on:
-      wso2ei-mysql:
-        condition: service_healthy
+    # depends_on:
+    #   wso2ei-mysql:
+    #     condition: service_healthy
     links:
       - wso2ei-mysql
   # wso2ei-integrator:
