--- a/docker-compose/integrator-analytics/docker-compose.yml
+++ b/docker-compose/integrator-analytics/docker-compose.yml
@@ -12,13 +12,13 @@ services:
       # mounting MySQL init scripts
       - ./mysql/scripts:/docker-entrypoint-initdb.d
       # mounting MySQL DB data
-      - ./mysql/data:/var/lib/mysql
-    healthcheck:
-      test: ["CMD", "mysqladmin" ,"ping", "-uroot", "-proot"]
-      interval: 5s
-      timeout: 3s
-      retries: 10
-      start_period: 10s
+    #   - ./mysql/data:/var/lib/mysql
+    # healthcheck:
+    #   test: ["CMD", "mysqladmin" ,"ping", "-uroot", "-proot"]
+    #   interval: 5s
+    #   timeout: 3s
+    #   retries: 10
+    #   start_period: 10s
   wso2ei-analytics:
     image: docker.wso2.com/wso2ei-analytics:6.2.0
     container_name: wso2ei-analytics
@@ -29,12 +29,12 @@ services:
       - 9712:9712
       - 7612:7612
       - 7712:7712
-    healthcheck:
-      test: ["CMD-SHELL", "curl -k -f https://localhost:9444/carbon/admin/login.jsp"]
-      interval: 5s
-      timeout: 3s
-      retries: 10
-      start_period: 30s
+    # healthcheck:
+    #   test: ["CMD-SHELL", "curl -k -f https://localhost:9444/carbon/admin/login.jsp"]
+    #   interval: 5s
+    #   timeout: 3s
+    #   retries: 10
+    #   start_period: 30s
     volumes:
       # mounting configurations
       - ./analytics:/home/wso2carbon/volumes/wso2/analytics
