--- a/docker-compose/integrator-analytics/wso2-ei_docker-compose.yml
+++ b/docker-compose/integrator-analytics/wso2-ei_docker-compose.yml
@@ -51,20 +51,20 @@ services:
       - 9443:9443
       - 8243:8243
       - 8280:8280
-    healthcheck:
-      test: ["CMD-SHELL", "curl -k -f https://localhost:9443/carbon/admin/login.jsp"]
-      interval: 5s
-      timeout: 3s
-      retries: 10
-      start_period: 60s
+    # healthcheck:
+    #   test: ["CMD-SHELL", "curl -k -f https://localhost:9443/carbon/admin/login.jsp"]
+    #   interval: 5s
+    #   timeout: 3s
+    #   retries: 10
+    #   start_period: 60s
     volumes:
       # mounting configurations
       - ./integrator:/home/wso2carbon/volumes/
-    depends_on:
-      wso2ei-mysql:
-        condition: service_healthy
-      wso2ei-analytics:
-        condition: service_healthy
-    links:
-      - wso2ei-mysql
-      - wso2ei-analytics
+    # depends_on:
+    #   wso2ei-mysql:
+    #     condition: service_healthy
+    #   wso2ei-analytics:
+    #     condition: service_healthy
+    # links:
+    #   - wso2ei-mysql
+    #   - wso2ei-analytics
