--- a/docker-compose/integrator-analytics/wso2-ei_docker-compose.yml
+++ b/docker-compose/integrator-analytics/wso2-ei_docker-compose.yml
@@ -45,7 +45,7 @@ services:
   #     - wso2ei-mysql
   wso2ei-integrator:
     image: docker.wso2.com/wso2ei-integrator:6.2.0
-    container_name: wso2ei-integrator
+    # container_name: wso2ei-integrator
     # hostname: wso2ei-integrator
     ports:
       - 9443:9443
